# autocomplete

./: .gitignore  AGENTS.md  Package.resolved  Package.swift  README.md
.codex/environments/: environment.toml
Sources/TabAnywhere/App/: TabAnywhereApp.swift
Sources/TabAnywhere/Models/: AcceptanceHotKey.swift  CompletionContext.swift  CompletionPromptPayload.swift  EditPrediction.swift  (+7 more)
docs/: feature-list.md  hackathon-video-demo.md  training-data-visualizations.md
script/: build_and_run.sh
training/: README.md  SETUP.md  pyproject.toml  requirements-training.txt
training/configs/: dpo_gemma_lora.yaml  eval_base_gemma.yaml  eval_finetuned_gemma.yaml  export_dpo_gguf.yaml  export_gguf.yaml  sft_gemma_lora.yaml
training/data/eval/: tabanywhere_eval_v001.jsonl  tabanywhere_eval_v001.manifest.json
training/data/preference/: tabanywhere_dpo_v001.jsonl  tabanywhere_dpo_v001.manifest.json
training/data/seed/: tabanywhere_seed_v001.jsonl  tabanywhere_seed_v001.manifest.json
training/notebooks/: tabanywhere_gemma4_unsloth_colab.ipynb
training/prompts/: edit_prediction_system.txt  edit_prediction_user_template.txt  sample_rendered_prompt.txt
training/schemas/: eval-example.schema.json  preference-example.schema.json  sft-example.schema.json
training/scripts/: dataset_utils.py  export_acceptance_samples.py  export_gguf_unsloth.py  generate_seed_examples.py  prepare_dpo_dataset.py  prepare_sft_dataset.py  redact_samples.py  render_prompt.py  run_eval.py  score_predictions.py  split_dataset.py  train_unsloth_dpo.py  train_unsloth_qlora.py  validate_dataset.py
(+19 files in other folders)
